--- a/clase_01/teoria/index.html
+++ b/clase_01/teoria/index.html
@@ -39,6 +39,6 @@
         </li>
     </ul>
 
-    <img width="200px" src="img/img1.jpg" alt="">
+    <img width="200px" src="img/riva_del_garda.jpg" alt="">
 </body>
 </html>
