--- a/clase_06/practica/index.html
+++ b/clase_06/practica/index.html
@@ -27,15 +27,15 @@
             <label for="num2" class="form-label">Número 2</label>
             <input type="text" class="form-control" id="num2">
         </div>
-        <button class="btn btn-primary">SUMAR</button>
-        <button type="reset" class="btn btn-danger">BORRAR</button>
+        <button class="btn btn-primary" id="btn_sumar">SUMAR</button>
+        <button type="reset" class="btn btn-danger" id="btn_borrar">BORRAR</button>
     </form>
 </div>
 <div class="col-12 col-md-8">
     <div id="caja_resultado">
         <h2>Resultado</h2>
         <div id="resultado">
-            aaaaaaaa
+            
         </div>
     </div>
 </div>
@@ -50,6 +50,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-
+<script src="js/scripts.js"></script>
 </body>
 </html>
